<resources>
    <string name="app_name">Washington Post News</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="url">URL</string>
    <string name="image">image</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
</resources>
