<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        cardview:cardBackgroundColor="#00d10e0e"
        cardview:cardCornerRadius="5dp"
        cardview:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#e4e4e4"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_loading" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/author"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/description"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|bottom"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
